--- a/frontend/src/components/TopDoctors/TopDoctors.css
+++ b/frontend/src/components/TopDoctors/TopDoctors.css
@@ -125,6 +125,10 @@
     }
 
     .doctor-details {
-        font-size: 13px;
+        font-size: 9px;
+    }
+
+    .doctor-speciality{
+        font-size: 12px;
     }
 }
